force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/affectlayer__ChorusEngagementContact__c.object-meta.xml
<CustomObject>
    <label>Chorus Engagement Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chorus Engagement Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>