force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__Contact__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chorus Engagement Contacts</relationshipLabel>
    <relationshipName>Chorus_Engagement_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>