force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__ContactEmail__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>