force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__Engagement__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>affectlayer__Engagement__c</referenceTo>
    <relationshipLabel>Chorus Engagement Contacts</relationshipLabel>
    <relationshipName>Chorus_Engagement_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>