force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__EngagementContactId__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__EngagementContactId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>