force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__Phone__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>