force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/fields/affectlayer__Title__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>