force-app/main/default/objects/affectlayer__ChorusEngagementContact__c/listViews/affectlayer__All.listView-meta.xml
<ListView>
    <fullName>affectlayer__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>